test/should_not_compile/duplicate_typbind.sml
type a = unit and a = unit;
